
2018-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* general: activated translated messages for COBOL runtime

2018-09-01  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: fixed non-working auto-check for libxml2

2018-08-30  Hal Duston

	* configure.ac: fixed removal of -DFORTIFY_SOURCE not removing -Wp also.

2018-08-19  Simon Sobisch <simonsobisch@gnu.org>

	* m4/pkg.m4: added for PKG_PROG_PKG_CONFIG / PKG_CHECK_MODULES macros
	  from current pkg-config release
	* configure.ac: included optional pkg-config (cross-compile aware),
	  currently only used for libxml2 (and only if xml2-config not found);
	  always check for existing header / linkable library for xml2
	* configure.ac: check for libxml2, but don't abort if not available;
	  prefer pkg-config over xml2-config

2018-08-19  Edward Hart <edward.dan.hart@gmail.com>

	* configure.ac: added detection of libxml2
	* m4/m4_ax_check_define.m4: added for AC_CHECK_DEFINE macro from the
	  GNU Autoconf Archive

2018-06-19  Ludwin Janvier <lud.janvier@gmail.com>

	* configure.ac: remove -g from default options and remove removal
	  of -g from CFLAGS

2018-06-04  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac [_WIN32]: only set GCC export and linker flag
	  if we actually compile with GCC

2018-05-18  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac [_WIN32]: define __GMP_LIBGMP_DLL when importing
	  and calling gmp functions (done for version check) - to use
	  a static version define __GMP_LIBGMP_DLL=0 via CPPFLAGS

2018-05-08  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac (AC_CHECK_FUNCS): removed unused strxfrm, added popen
	* configure.ac: ensure that we don't replace too much when adjusting
	  CFLAGS concerning -g

2018-04-10  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: removed use of line breaks in sysout from C
	  test compilation for extracting GMP/BDB version numbers

2018-04-04  Simon Sobisch <simonsobisch@gnu.org>
