@@ -7,17 +7,20 @@
 setlocal enabledelayedexpansion
 set cb_errorlevel=0
 
+:: Get the main dir from the batch's position
+set "COB_MAIN_DIR=%~dp0"
+
 :: Set (temporary) distribution folder
-set "cob_dist_path=%~dp0\dist\"
+set "cob_dist_path=%COB_MAIN_DIR%distnew\"
 
 :: Set clean source directory
-set "cob_source_path=%~dp0..\"
+set "cob_source_path=%COB_MAIN_DIR%..\"
 
 :: Set directory with necessary header files
-set "cob_header_path=%~dp0"
+set "cob_header_path=%COB_MAIN_DIR%"
 
 :: Set directory with generated release files
-set "cob_release_path=%~dp0"
+set "cob_release_path=%COB_MAIN_DIR%"
 
 if exist "%cob_release_path%config.h" (
    for /f "tokens=3 delims= " %%a in ('find "PACKAGE_NAME" "%cob_header_path%config.h"') do (
@@ -28,13 +31,18 @@ if exist "%cob_release_path%config.h" (
       set PVTEMP=%%a
    )
    set PACKAGE_VERSION=!PVTEMP:"=!
+   for /f "tokens=3 delims= " %%a in ('find "PACKAGE_TARNAME" "%cob_header_path%config.h"') do (
+      set PVTEMP=%%a
+   )
+   set PACKAGE_TARNAME=!PVTEMP:"=!
    set PACKAGE_DIRECTORY=!PACKAGE_NAME!_!PACKAGE_VERSION!
 ) else (
    echo WARNING: config.h not found as "%cob_header_path%config.h"!
    set PACKAGE_DIRECTORY=GnuCOBOL
+   set PACKAGE_TARNAME=gnucobol
 )
 echo Creating binary distribution for %PACKAGE_DIRECTORY%
-set PACKAGE=%PACKAGE_DIRECTORY%_vs_bin
+set DIST_PACKAGE=%PACKAGE_DIRECTORY%_vs_bin
 
 :: check for existing binaries
 if /i "%1%"=="DEBUG" (
@@ -109,14 +117,28 @@ copy "%cob_header_path%gmp.h"			include\	1>nul
 
 echo Copying translations...
 mkdir po
-for %%f in ("%cob_source_path%po\*.gmo") do (
-   copy "%%~ff"					po\%%~nf.mo	1>nul
-)
 copy "%cob_source_path%po\*.po"			po\	1>nul
 copy "%cob_source_path%po\*.pot"		po\	1>nul
 if exist "po\*@*" (
    erase /Q po\*@* 1>nul
 )
+dir "%cob_source_path%po\*.gmo" /b /a-d >nul 2>&1
+if "%errorlevel%"=="1" (
+   dir "%cob_source_path%po\*.mo" /b /a-d >nul 2>&1
+)
+if "%errorlevel%"=="0" (
+   echo Copying message catalogs...
+   mkdir locale
+   for %%f in ("%cob_source_path%po\*.gmo") do (
+     call :copy_locale %%f
+   )
+   for %%f in ("%cob_source_path%po\*.mo")  do (
+     call :copy_locale %%f
+   )
+) else (
+   echo no message catalogs found, consider compiling them
+)
+
 echo Copying extras...
 mkdir extras
 copy "%cob_source_path%extras\*.cob"		extras\			1>nul
@@ -164,22 +186,22 @@ echo.
 
 echo Compressing dist package...
 if exist "%ProgramFiles%\7-Zip\7z.exe" (
-   erase "..\%PACKAGE%.7z" 1>nul 2>nul
-   "%ProgramFiles%\7-Zip\7z.exe" a -r -mx=9 "..\%PACKAGE%.7z" *
+   erase "..\%DIST_PACKAGE%.7z" 1>nul 2>nul
+   "%ProgramFiles%\7-Zip\7z.exe" a -r -mx=9 "..\%DIST_PACKAGE%.7z" *
 ) else if exist "%ProgramFiles(x86)%\7-Zip\7z.exe" (
-   erase "..\%PACKAGE%.7z" 1>nul
-   "%ProgramFiles(x86)%\7-Zip\7z.exe" a -r -mx=9 "..\%PACKAGE%.7z" *
+   erase "..\%DIST_PACKAGE%.7z" 1>nul
+   "%ProgramFiles(x86)%\7-Zip\7z.exe" a -r -mx=9 "..\%DIST_PACKAGE%.7z" *
 ) else (
    echo.
-   echo 7-zip not found, "%PACKAGE%.7z" not created
-   cd ..
-   move dist PACKAGE 1>nul
-   echo.
-   echo %cob_release_path%%PACKAGE% ready for distribution; manual compression needed.
+   echo 7-zip not found, "%DIST_PACKAGE%.7z" not created
+   rem cd ..
+   rem move dist PACKAGE 1>nul
+   ren echo.
+   echo %cob_release_path%%DIST_PACKAGE% ready for distribution; manual compression needed.
    goto :end
 )
 echo.
-echo %cob_release_path%%PACKAGE%.7z ready for distribution.
+echo %cob_release_path%%DIST_PACKAGE%.7z ready for distribution.
 
 goto :end
 
@@ -269,12 +291,16 @@ if exist "%copy_from%\libvbisam.dll" (
    echo No ISAM handler found.
 )
 
+:: Copy the intl/iconv library.
+call :copy_lib_if_exists "libintl.dll" %copy_to_bin% "intl"
+call :copy_lib_if_exists "libiconv.dll" %copy_to_bin% "iconv"
+
 :: Copy the curses library.
 call :copy_lib_if_exists "pdcurses.dll" %copy_to_bin% "curses"
 
 :: Copy the XML libary (and its dependents)
 call :copy_lib_if_exists "libxml2-2.dll" %copy_to_bin% "XML"
-call :copy_lib_if_exists "libiconv-2.dll" %copy_to_bin% "iconv"
+call :copy_lib_if_exists "libiconv-2.dll" %copy_to_bin% "iconv-2"
 call :copy_lib_if_exists "zlib1.dll" %copy_to_bin% "zlib"
 call :copy_lib_if_exists "libcharset-1.dll" %copy_to_bin% "charset"
 
@@ -298,6 +324,13 @@ if %errorlevel% neq 0 (
    set cb_errorlevel=!errorlevel!
 )
 popd
+goto :eof
+
+
+:copy_locale
+mkdir "locale\%~n1"
+mkdir "locale\%~n1\LC_MESSAGES"
+copy "%~f1" "locale\%~n1\LC_MESSAGES\%PACKAGE_TARNAME%.mo"	1>nul
 goto :eof
 
 
